Fix overflow on transport screen

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -406,7 +406,7 @@ h2.consultation-meta {
 }
 
 .bottom-button {
-  margin-top: 70px;
+  margin-top: 74px;
 }
 
 .bottom-button p {
